--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,17 @@
   border: 0;
   box-sizing: border-box;
 }
+
+:root{
+  --primary-color: #e82525;
+  --serviceimgvw: 14.5vw;
+}
+
+::selection {
+    background-color: var(--primary-color);
+    color: #fff;
+    text-shadow: none;
+}
+
+/* what is the best thing to do while make responsive site so, it won't frustrate coder 
+ 1) rather then code for one device at a time , code each components complete responsive before move to further components */
